# sce-checker

./: .gitignore  README.md  pyproject.toml
sce_checker/: __init__.py  __main__.py  consts.py  template.xlsm  zip_preparer.py
sce_checker/inputters/: inputter_excel.py
sce_checker/outputers/: outputer_csv.py
sce_checker/ui/: main_window.py
