[build-system]
requires = ["flit_core >=3.7,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sce_checker"
authors = [{name = "Arthur Zamarin", email = "arthurzam@gmail.com"}]
dynamic = ["version", "description"]
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = [
    "openpyxl",
]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
]

[project.scripts]
sce_checker = "sce_checker.__main__:checker_main"

[project.urls]
Homepage = "https://github.com/arthurzam/sce-checker"

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
]
